# endstone-blockdata-api

./: BUILD_STATUS.md  CHANGELOG.md  CI_WORKFLOW_COPY.yml  CMakeLists.txt  README.md  SOURCE_RELEASE.json  UPDATE_FROM_0.4.0-alpha.4.md  VALIDATION_RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
compatibility/: versions.json
docs/: ARCHITECTURE.md  BDS_26_30_ADAPTER.md  CI_TROUBLESHOOTING.md  INSTALL.md  NATIVE_ADAPTER_GUIDE.md  README.md  _sidebar.md  api_reference.md  audit_system.md  in_game_testing.md  index.html  nbt_and_containers.md
examples/cpp/: antigrief_container_reactor.cpp
examples/python/: antigrief_container_audit.py  container_example.py  in_game_test_plugin.py  live_antigrief_capture.py
examples/python/block_data_inspector_plugin/: README.md  plugin.py  pyproject.toml
examples/python/block_data_inspector_plugin/src/endstone_blockdata_inspector/: __init__.py  plugin.py
include/: version.h.in
include/endstone_blockdata/: adapter.h  audit.h  bds_26_30_adapter.h  block_data_service.h  block_patch.h  block_snapshot.h  container.h  container_audit_reactor.h  endstone_adapter.h  live_service.h  native_adapter.h  nbt.h  types.h
python/endstone_blockdata/: __init__.py  model.py  service.py
scripts/: build_exact.py
src/: audit.cpp  bds_26_30_adapter.cpp  block_data_service.cpp  container_audit_reactor.cpp  endstone_public_adapter.cpp  in_memory_adapter.cpp  live_python_bindings.cpp  nbt.cpp  plugin.cpp  python_bindings.cpp  version_gate.cpp
tests/cpp/: test_blockdata.cpp
tests/python/: test_service.py
