[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
[project]
name = "endstone-blockdata-api"
version = "0.4.5b5"
description = "Detached block state, block entity and NBT API for Endstone"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
[tool.setuptools]
package-dir = {"" = "python"}
[tool.setuptools.packages.find]
where = ["python"]
